fix(config): avoid null pointer in qdrant collection validation